ingress_route/hubble-strip-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hubble-strip
  namespace: edge
spec:
  stripPrefix:
    prefixes:
      - /hubble
