ingress_route/harbor.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: harbor
  namespace: edge
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints: ["web"]
  routes:
  - match: Host(`harbor.home.internal`)
    kind: Rule
    services:
    - name: harbor
      namespace: harbor
      port: 80
