ingress_route/huble-ui.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hubble-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints: ["web"]
  routes:
    - match: Host(`hubble.cocopam.dev`)
      kind: Rule
      services:
        - name: hubble-ui
          namespace: kube-system
          port: 80
